# desopycli

./: README.md  pyproject.toml  requirements.txt  setup.py
.ropeproject/: config.py
desopycli/: __init__.py  cli.py
