[project]
    name="DeSoPyCLI"
version = "0.0.1"
authors = [
  { name="Steven Joseph", email="stevenjose@gmail.com" },
]
    description="Python Deso Command Line Interface"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "docopt",
    "deso",
    "emoji",
    "python-box",
    "pyspellchecker",
]
classifiers = [
        "Programming Language :: Python",
        "Programming Language :: Python :: 2",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.3",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Development Status :: 4 - Beta",
        "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/jagguli/desopycli"
"Bug Tracker" = "https://github.com/jagguli/desopycli/issues"

[project.scripts]
deso = "desopycli.cli:main"
